src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>AS_Locality__c</fullName>
        <label>AS Locality</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>North &amp; South of Tyne</fullName>
                </value>
                <value>
                    <fullName>Durham &amp; Tees Valley</fullName>
                </value>
                <value>
                    <fullName>Comment [RD1]: Are these being reviewed currently?</fullName>
                </value>
                <value>
                    <fullName>North Yorkshire</fullName>
                </value>
                <value>
                    <fullName>West Yorkshire</fullName>
                </value>
                <value>
                    <fullName>South Yorkshire &amp; Humber</fullName>
                </value>
                <value>
                    <fullName>East Midlands West</fullName>
                </value>
                <value>
                    <fullName>East Midlands East</fullName>
                </value>
                <value>
                    <fullName>East Midlands South &amp; Central</fullName>
                </value>
                <value>
                    <fullName>Cambridgeshire &amp; Bedfordshire</fullName>
                </value>
                <value>
                    <fullName>Norfolk &amp; Suffolk</fullName>
                </value>
                <value>
                    <fullName>Essex</fullName>
                </value>
                <value>
                    <fullName>Hertfordshire</fullName>
                </value>
                <value>
                    <fullName>Berkshire, Buckinghamshire &amp; Oxfordshire</fullName>
                </value>
                <value>
                    <fullName>Hampshire, IofW &amp; Channel Islands</fullName>
                </value>
                <value>
                    <fullName>Surrey</fullName>
                </value>
                <value>
                    <fullName>Sussex</fullName>
                </value>
                <value>
                    <fullName>Kent</fullName>
                </value>
                <value>
                    <fullName>Avon, Gloucestershire &amp; Wiltshire</fullName>
                </value>
                <value>
                    <fullName>Dorset &amp; Somerset</fullName>
                </value>
                <value>
                    <fullName>Devon, Cornwall &amp; Isles of Sicily</fullName>
                </value>
                <value>
                    <fullName>Birmingham, Solihull, Coventry &amp; Warwickshire</fullName>
                </value>
                <value>
                    <fullName>Herefordshire, Worcestershire &amp; the Black Country</fullName>
                </value>
                <value>
                    <fullName>Staffordshire &amp; Shropshire</fullName>
                </value>
                <value>
                    <fullName>Gwent</fullName>
                </value>
                <value>
                    <fullName>South East Wales</fullName>
                </value>
                <value>
                    <fullName>South West Wales</fullName>
                </value>
                <value>
                    <fullName>North Wales</fullName>
                </value>
                <value>
                    <fullName>Cumbria &amp; Lancashire</fullName>
                </value>
                <value>
                    <fullName>Merseyside &amp; IofM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Affiliations__c</fullName>
        <label>Affiliations</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ADI Alzheimer Association</fullName>
                </value>
                <value>
                    <fullName>Alzheimer Europe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>England</fullName>
                </value>
                <value>
                    <fullName>Wales</fullName>
                </value>
                <value>
                    <fullName>Northern Ireland</fullName>
                </value>
                <value>
                    <fullName>Scotland</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DCEProdOrgID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field contains the ID of the Organisation within our production instance of Salesforce. This must be completed in order for the portal to work for users</description>
        <externalId>true</externalId>
        <label>DCE - Production Organisation ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Facebook_page__c</fullName>
        <label>Facebook page</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Import_Source__c</fullName>
        <label>Import Source</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Lead_Contact_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Twitter__c</fullName>
        <label>Twitter</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YE_Organisation_Subtype__c</fullName>
        <label>YE Organisation Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Academy</fullName>
                </value>
                <value>
                    <fullName>Beavers</fullName>
                </value>
                <value>
                    <fullName>Cubs</fullName>
                </value>
                <value>
                    <fullName>Scouts</fullName>
                </value>
                <value>
                    <fullName>Sea Scouts</fullName>
                </value>
                <value>
                    <fullName>Network</fullName>
                </value>
                <value>
                    <fullName>Rainbows</fullName>
                </value>
                <value>
                    <fullName>Brownies</fullName>
                </value>
                <value>
                    <fullName>Guides</fullName>
                </value>
                <value>
                    <fullName>Senior Section</fullName>
                </value>
                <value>
                    <fullName>Cadets</fullName>
                </value>
                <value>
                    <fullName>St Johns Ambulance</fullName>
                </value>
                <value>
                    <fullName>Adult Social Care</fullName>
                </value>
                <value>
                    <fullName>Alzheimer’s Society</fullName>
                </value>
                <value>
                    <fullName>Girl Scouts</fullName>
                </value>
                <value>
                    <fullName>Explorers</fullName>
                </value>
                <value>
                    <fullName>Grammar</fullName>
                </value>
                <value>
                    <fullName>Theatre</fullName>
                </value>
                <value>
                    <fullName>Museum</fullName>
                </value>
                <value>
                    <fullName>College</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>YE_Organisation_Type__c</fullName>
        <label>YE Organisation Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>School</fullName>
                </value>
                <value>
                    <fullName>University</fullName>
                </value>
                <value>
                    <fullName>Youth organisation</fullName>
                </value>
                <value>
                    <fullName>Care Home</fullName>
                </value>
                <value>
                    <fullName>Charity</fullName>
                </value>
                <value>
                    <fullName>Council</fullName>
                </value>
                <value>
                    <fullName>DAA</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
                <value>
                    <fullName>Arts</fullName>
                </value>
                <value>
                    <fullName>NHS</fullName>
                </value>
                <value>
                    <fullName>Educational body</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>Countries</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Country</value>
        </filters>
        <label>Countries</label>
    </listViews>
    <listViews>
        <fullName>Country_Organisations</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Country Organisation</value>
        </filters>
        <label>Country Organisations</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>Newtoday</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>New today</label>
    </listViews>
    <listViews>
        <fullName>YE_Imported_Organisations</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Import_Source__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Import_Source__c</field>
            <operation>startsWith</operation>
            <value>YE</value>
        </filters>
        <label>YE - Imported Organisations</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>